1.0 2012-03-22 Gregory Nutt <gnutt@nuttx.org>

* The initial release of the NxWidgets package

1.1 2012-xx-xx Gregory Nutt <gnutt@nuttx.org>

* Updated and verified the NxWidgets DOxygen documentation.  Contributed
  by Jose Pablo Carballo.
* IBitmap, CRlePalettBitmap:  Extended class to support differnt LUTs
  for selected and non-selected images.
* CImage: If selected, uses different LUTs based, different borders.
  CImage is now basically a button type.
* CImage: Add logic to hightlight an CImage (using the selected LUT).
* nxwm: The tiny NX window manager (NxWM) is being developed in this directory.
* UnitTests/nxwm:  A unit test for the NX window manager.
* During integration of NxWM, corrected numerous problems with NxWidgets
  running on toolbars and framed windows.  That capability was commented
  out in the 1.0 release but is verfied functional in 1.1.